--- a/code/addons/TIMO/manifest.json
+++ b/code/addons/TIMO/manifest.json
@@ -8,18 +8,18 @@
 	"icons": {
 		"32": "data/XORkey-32.png"
 	},
-	"permissions": ["activeTab" ],
+	"permissions": [ "<all_urls>", "activeTab" ],
 	"browser_action": {
 		"default_icon": "data/XORkey-32.png",
 		"default_title": "Login with TIMO"
 	},
 	"background": {
-		"scripts": ["background.js", "data/sha256.js" ]
+		"scripts": ["back.js", "data/sha256.js" ]
 	},
 	"content_scripts": [
 		{
 			"matches": [ "<all_urls>" ],
-			"js": ["content.js", "data/sha256.js"],
+			"js": ["tab.js", "data/sha256.js"],
 			"run_at":	"document_end"
 		}
 	]
