proof intermediate save

--- a/pub/proof/Makefile
+++ b/pub/proof/Makefile
@@ -10,12 +10,12 @@
 	bibtex $<
 
 vpath %.tex tex
-vpath %.bib tex
+vpath %.bib bib
 
-LATEX_FILES		= proof.tex
-BIBTEX_FILES	= # article.bib misc.bib
+LATEX_FILES		= proof.tex layout.tex macros.tex intro.tex random.tex login.tex keyring.tex keyop.tex
+BIBTEX_FILES	= proof.bib # article.bib misc.bib
 
-proof.pdf:
+proof.pdf: proof.dvi
 
 proof.dvi: $(LATEX_FILES) proof.bbl
 
