--- a/code/addons/TIMO/manifest.json
+++ b/code/addons/TIMO/manifest.json
@@ -14,12 +14,12 @@
 		"default_title": "Login with TIMO"
 	},
 	"background": {
-		"scripts": ["back.js", "data/sha256.js" ]
+		"scripts": ["data/random.js", "data/sha256.js", "data/keyring.js", "backslwp.js"]
 	},
 	"content_scripts": [
 		{
-			"matches": [ "<all_urls>" ],
-			"js": ["tab.js", "data/sha256.js"],
+			"matches": ["*://*.xorkey.com/*"],
+			"js": ["tabslwp.js", "data/sha256.js"],
 			"run_at":	"document_end"
 		}
 	]
